@@ -1,3 +1,10 @@
+2011-03-03 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk.
+
+	* include/functions_reporting.php: refixed the status when the agent have
+	any module critical and any alert fired.
+
 2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>
 
 	Merged bugfix from trunk.
